After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 794646 - Adblock config occasionally opens in gedit three times at startup
Adblock config occasionally opens in gedit three times at startup
Status: RESOLVED FIXED
Product: epiphany
Classification: Core
Component: General
3.28.x
Other Linux
: Normal normal
: ---
Assigned To: Michael Catanzaro
Epiphany Maintainers
Depends on:
Blocks:
 
 
Reported: 2018-03-24 03:47 UTC by Michael Gratton
Modified: 2018-05-01 14:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Do not auto-open adblock filters after download (1.91 KB, patch)
2018-03-25 21:27 UTC, Michael Catanzaro
committed Details | Review

Description Michael Gratton 2018-03-24 03:47:35 UTC
Sometimes shortly after launching Ephy or an installed webapp, the three adblocker files from ~/.config/epiphany/**/adblock are opened in gedit windows (my default text file editor). This happens with 3.27.90 and 3.28.0.1.

Presumably happens when the files have just been updated?
Comment 1 Michael Catanzaro 2018-03-24 20:37:45 UTC
Well that's one I have not heard of before... not sure what could cause this.
Comment 2 Michael Gratton 2018-03-25 04:45:52 UTC
I have the automatically open downloads pref enabled, if that helps?
Comment 3 Michael Catanzaro 2018-03-25 17:44:57 UTC
D'oh, yes indeed. OK, so we need a download flag to prevent that. Should be an easy fix.
Comment 4 Michael Catanzaro 2018-03-25 21:02:57 UTC
Regression from bug #776682
Comment 5 Michael Catanzaro 2018-03-25 21:27:02 UTC
The following fix has been pushed:
9d97451 Do not auto-open adblock filters after download
Comment 6 Michael Catanzaro 2018-03-25 21:27:07 UTC
Created attachment 370127 [details] [review]
Do not auto-open adblock filters after download

Oooops!
Comment 7 schuschu 2018-05-01 09:29:14 UTC
I have the same issue with 3.26.x
Comment 8 Michael Catanzaro 2018-05-01 14:20:07 UTC
It's fixed in 3.28.1.
Comment 9 Michael Catanzaro 2018-05-01 14:20:39 UTC
(In reply to Michael Gratton from comment #2)
> I have the automatically open downloads pref enabled, if that helps?

^ And for a workaround, you can disable automatic downloads.