Do not auto-open adblock filters after download

Oooops!

https://bugzilla.gnome.org/show_bug.cgi?id=794646