embed/ephy-download.h
@@ -33,7 +33,8 @@ typedef enum
 {
   EPHY_DOWNLOAD_ACTION_NONE,
   EPHY_DOWNLOAD_ACTION_BROWSE_TO,
-  EPHY_DOWNLOAD_ACTION_OPEN
+  EPHY_DOWNLOAD_ACTION_OPEN,
+  EPHY_DOWNLOAD_ACTION_DO_NOT_AUTO_OPEN
 } EphyDownloadActionType;
 
 EphyDownload *ephy_download_new                   (WebKitDownload *download);
